[gd_scene load_steps=17 format=2]

[ext_resource path="res://_glb/enemies/crawly/crawly.glb" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/crawly.gd" type="Script" id=2]
[ext_resource path="res://material/env/ancient/white_metal.material" type="Material" id=3]
[ext_resource path="res://audio/enemy/crawly_run.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/enemy/crawly_death.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/enemy/crawly_damaged.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/enemy/crawly_quit.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/enemy/crawly_attack.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/enemy/crawly_alerted.wav" type="AudioStream" id=9]

[sub_resource type="CylinderShape" id=2]
height = 0.965059
radius = 0.727064

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.300322, 0.373902, 0.29012 )

[sub_resource type="CylinderShape" id=8]
height = 5.97088
radius = 10.6616

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.581435, 0.579064, 0.600733 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2, 1, 3 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.45098, 0.45098, 0.45098, 1 )
metallic = 1.0

[node name="crawly" groups=["dynamic", "enemy", "push", "target"] instance=ExtResource( 1 )]
collision_layer = 65549
script = ExtResource( 2 )
id = "crawly"
mesh_node = NodePath("Armature/Skeleton/crawly")
health = 30
alert_audio = ExtResource( 9 )
run_audio = ExtResource( 4 )
death_audio = ExtResource( 5 )
damage_audio = ExtResource( 6 )
quit_audio = ExtResource( 7 )
attack_audio = ExtResource( 8 )

[node name="Skeleton" parent="Armature" index="0"]
bones/11/bound_children = [ NodePath("legfl") ]
bones/13/bound_children = [ NodePath("legbl") ]
bones/15/bound_children = [ NodePath("legfr") ]
bones/17/bound_children = [ NodePath("legbr") ]

[node name="crawly" parent="Armature/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="legfr" type="BoneAttachment" parent="Armature/Skeleton" index="1"]
transform = Transform( -0.96348, 0, 0.267781, -0.267781, 0, -0.96348, 0, -1, 0, -0.933125, 0, 1.09104 )
bone_name = "FrontFoot.R"

[node name="legfl" type="BoneAttachment" parent="Armature/Skeleton" index="2"]
transform = Transform( -0.96348, 0, -0.267781, 0.267781, 0, -0.96348, 0, -1, 0, 0.933125, 0, -0.00983565 )
bone_name = "FrontFoot.L"

[node name="legbr" type="BoneAttachment" parent="Armature/Skeleton" index="3"]
transform = Transform( -0.96348, 0, 0.267781, -0.267781, 0, -0.96348, 0, -1, 0, -0.950484, -2.32831e-10, -1.37422 )
bone_name = "RearFoot.R"

[node name="legbl" type="BoneAttachment" parent="Armature/Skeleton" index="4"]
transform = Transform( -0.96348, 0, -0.267781, 0.267781, 0, -0.96348, 0, -1, 0, 0.950484, -2.32831e-10, -0.0769611 )
bone_name = "RearFoot.L"

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Idle-loop"

[node name="CollisionShape" type="CollisionShape" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.454102, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4534, 0.578267 )
shape = SubResource( 7 )

[node name="awareness" type="Area" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.026123, 0 )
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3662, 6 )
shape = SubResource( 8 )

[node name="hurtbox" type="Area" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.026123, 0 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape" type="CollisionShape" parent="hurtbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.651042, 0.643368 )
shape = SubResource( 3 )

[node name="attack_range" type="Area" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.026123, 0 )
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="attack_range" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.922294, 1.00539 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.026123, 0 )
unit_size = 5.0
max_db = 1.0
bus = "SFX_Enemy"

[node name="attack_audio" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 8 )
unit_size = 10.0
max_db = -4.0
bus = "SFX_Enemy"

[node name="debug_shield" type="MeshInstance" parent="." index="10"]
transform = Transform( 0.429371, 0, 0, 0, 0.652011, 0.0845977, 0, -0.344664, 0.160036, 0, 0.518066, 0.686818 )
visible = false
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="ref_target" type="Position3D" parent="." index="11"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645996, 0 )

[node name="VisibilityEnabler" type="VisibilityEnabler" parent="." index="12"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.58432, 0 )
aabb = AABB( -1.20784, -0.784991, -1.33699, 2.41568, 1.56998, 2.67397 )
freeze_bodies = false
children_only = false
